--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="JGPjCVntGJ_UwvGLsJn_kfRIoM0fcwF4lIX_6Ywapk8"
+    />
     <title>Travel Blog</title>
   </head>
   <body>
