--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="google-site-verification"
       content="JGPjCVntGJ_UwvGLsJn_kfRIoM0fcwF4lIX_6Ywapk8"
     />
-    <title>Travel Blog</title>
+    <title>Kaif Travel Blog</title>
   </head>
   <body>
     <div id="root"></div>
