--- a/index.html
+++ b/index.html
@@ -8,7 +8,50 @@
       name="google-site-verification"
       content="JGPjCVntGJ_UwvGLsJn_kfRIoM0fcwF4lIX_6Ywapk8"
     />
-    <title>Kaif Travel Blog</title>
+    <title>Kaif’s Travel Blog | Beautiful Destinations & Travel Memories</title>
+
+    <meta
+      name="description"
+      content="Explore stunning travel destinations, personal trip memories, timelines, and inspiring travel stories from Mohammad Kaif. A visually rich and beautifully designed travel blog."
+    />
+
+    <meta
+      name="keywords"
+      content="travel blog, travel memories, travel photos, destinations, trip stories, Kaif travel blog, travel timeline, personal blog, Mohammad Kaif blog"
+    />
+
+    <meta name="author" content="Kaif" />
+
+    <!-- Open Graph (Facebook, Instagram, WhatsApp preview) -->
+    <meta
+      property="og:title"
+      content="Kaif’s Travel Blog | Beautiful Destinations & Memories"
+    />
+    <meta
+      property="og:description"
+      content="Explore stunning destinations, trip stories, travel timelines, and beautiful memories from Kaif’s journey."
+    />
+    <meta property="og:url" content="https://travel-blog-kaif.netlify.app/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://travel-blog-kaif.netlify.app/cover.jpg"
+    />
+
+    <!-- Twitter Preview -->
+    <meta name="twitter:title" content="Kaif’s Travel Blog" />
+    <meta
+      name="twitter:description"
+      content="Discover beautiful destinations and personal travel memories."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:image"
+      content="https://travel-blog-kaif.netlify.app/cover.jpg"
+    />
+
+    <!-- Mobile SEO -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div id="root"></div>
