--- a/index.html
+++ b/index.html
@@ -4,55 +4,59 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Google Verification -->
     <meta
       name="google-site-verification"
       content="JGPjCVntGJ_UwvGLsJn_kfRIoM0fcwF4lIX_6Ywapk8"
     />
-    <title>Kaif’s Travel Blog | Beautiful Destinations & Travel Memories</title>
 
+    <!-- Basic SEO -->
+    <title>Kaif’s Travel Blog | Beautiful Destinations & Travel Memories</title>
     <meta
       name="description"
       content="Explore stunning travel destinations, personal trip memories, timelines, and inspiring travel stories from Mohammad Kaif. A visually rich and beautifully designed travel blog."
     />
-
     <meta
       name="keywords"
       content="travel blog, travel memories, travel photos, destinations, trip stories, Kaif travel blog, travel timeline, personal blog, Mohammad Kaif blog"
     />
+    <meta name="author" content="Mohammad Kaif" />
 
-    <meta name="author" content="Kaif" />
-
-    <!-- Open Graph (Facebook, Instagram, WhatsApp preview) -->
+    <!-- OPEN GRAPH -->
     <meta
       property="og:title"
       content="Kaif’s Travel Blog | Beautiful Destinations & Memories"
     />
     <meta
       property="og:description"
-      content="Explore stunning destinations, trip stories, travel timelines, and beautiful memories from Kaif’s journey."
+      content="Explore stunning destinations, trip stories, travel timelines, and beautiful memories from Kaif’s journeys."
     />
     <meta property="og:url" content="https://travel-blog-kaif.netlify.app/" />
     <meta property="og:type" content="website" />
+
+    <!-- ⭐ Correct OG Image (JPG version you created) -->
     <meta
       property="og:image"
-      content="https://travel-blog-kaif.netlify.app/cover.jpg"
+      content="https://travel-blog-kaif.netlify.app/og-image.jpg"
     />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
-    <!-- Twitter Preview -->
+    <!-- TWITTER CARD -->
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Kaif’s Travel Blog" />
     <meta
       name="twitter:description"
       content="Discover beautiful destinations and personal travel memories."
     />
-    <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:image"
-      content="https://travel-blog-kaif.netlify.app/cover.jpg"
+      content="https://travel-blog-kaif.netlify.app/og-image.jpg"
     />
-
-    <!-- Mobile SEO -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
