--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Google Verification -->
@@ -12,10 +13,11 @@
     />
 
     <!-- Basic SEO -->
-    <title>Kaif’s Travel Blog | Beautiful Destinations & Travel Memories</title>
+    <title>Kaif's Travel Blog | Beautiful Destinations & Travel Memories</title>
+
     <meta
       name="description"
-      content="Explore stunning travel destinations, personal trip memories, timelines, and inspiring travel stories from Mohammad Kaif. A visually rich and beautifully designed travel blog."
+      content="Explore stunning travel destinations and personal travel stories by Mohammad Kaif."
     />
     <meta
       name="keywords"
