--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,11 +13,13 @@
     />
 
     <!-- Basic SEO -->
-    <title>Kaif's Travel Blog | Beautiful Destinations & Travel Memories</title>
+    <title>Mohammad Kaif's Travel Blog</title>
 
     <meta
       name="description"
-      content="Explore stunning travel destinations and personal travel stories by Mohammad Kaif."
+      content="Explore inspiring travel stories, beautiful destinations, and unforgettable journeys.
+Discover experiences, moments, and memories from adventures around the world.
+A personal space to share travel inspiration, guides, and real travel experiences."
     />
     <meta
       name="keywords"
